[package]
name = "crcxx"
version = "0.3.0"
license = "Apache-2.0"
authors = ["ING Systems <contact@ing-systems.com>"]
description = "The crate compute CRC-8/16/32/64/128 using various methods. Included catalog of CRC parameters simplify usage."
documentation = "https://docs.rs/crcxx"
edition = "2021"
homepage = "https://github.com/ing-systems/crcxx"
repository = "https://github.com/ing-systems/crcxx"
readme = "README.md"
keywords = ["crc", "crc8", "crc16", "crc32", "crc64"]
categories = ["algorithms"]
rust-version = "1.59"

[dependencies]

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "bench"
harness = false
